@@ -1,6 +1,6 @@
 /* 
 ** NetXMS - Network Management System
-** Copyright (C) 2003-2017 Victor Kirhenshtein
+** Copyright (C) 2003-2018 Victor Kirhenshtein
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -21,6 +21,40 @@
 **/
 
 #include "nxcore.h"
+
+/**
+ * Delayed SQL request
+ */
+struct DELAYED_SQL_REQUEST
+{
+   TCHAR *query;
+   int bindCount;
+   BYTE *sqlTypes;
+   TCHAR *bindings[1]; /* actual size determined by bindCount field */
+};
+
+/**
+ * Delayed request for idata_ INSERT
+ */
+struct DELAYED_IDATA_INSERT
+{
+   time_t timestamp;
+   UINT32 nodeId;
+   UINT32 dciId;
+   TCHAR value[MAX_RESULT_LENGTH];
+};
+
+/**
+ * Delayed request for raw_dci_values UPDATE or DELETE
+ */
+struct DELAYED_RAW_DATA_UPDATE
+{
+   time_t timestamp;
+   UINT32 dciId;
+   bool deleteFlag;
+   TCHAR rawValue[MAX_RESULT_LENGTH];
+   TCHAR transformedValue[MAX_RESULT_LENGTH];
+};
 
 /**
  * Generic DB writer queue
@@ -123,7 +157,7 @@ void QueueIDataInsert(time_t timestamp, UINT32 nodeId, UINT32 dciId, const TCHAR
 	rq->timestamp = timestamp;
 	rq->nodeId = nodeId;
 	rq->dciId = dciId;
-	nx_strncpy(rq->value, value, MAX_RESULT_LENGTH);
+	_tcslcpy(rq->value, value, MAX_RESULT_LENGTH);
 	g_dciDataWriterQueue->put(rq);
 	g_idataWriteRequests++;
 }
@@ -136,10 +170,23 @@ void QueueRawDciDataUpdate(time_t timestamp, UINT32 dciId, const TCHAR *rawValue
 	DELAYED_RAW_DATA_UPDATE *rq = (DELAYED_RAW_DATA_UPDATE *)malloc(sizeof(DELAYED_RAW_DATA_UPDATE));
 	rq->timestamp = timestamp;
 	rq->dciId = dciId;
-	nx_strncpy(rq->rawValue, rawValue, MAX_RESULT_LENGTH);
-	nx_strncpy(rq->transformedValue, transformedValue, MAX_RESULT_LENGTH);
+	_tcslcpy(rq->rawValue, rawValue, MAX_RESULT_LENGTH);
+	_tcslcpy(rq->transformedValue, transformedValue, MAX_RESULT_LENGTH);
+	rq->deleteFlag = false;
 	g_dciRawDataWriterQueue->put(rq);
 	g_rawDataWriteRequests++;
+}
+
+/**
+ * Queue DELETE request for raw_dci_values table
+ */
+void QueueRawDciDataDelete(UINT32 dciId)
+{
+   DELAYED_RAW_DATA_UPDATE *rq = (DELAYED_RAW_DATA_UPDATE *)malloc(sizeof(DELAYED_RAW_DATA_UPDATE));
+   rq->dciId = dciId;
+   rq->deleteFlag = true;
+   g_dciRawDataWriterQueue->put(rq);
+   g_rawDataWriteRequests++;
 }
 
 /**
@@ -273,15 +320,29 @@ static THREAD_RESULT THREAD_CALL RawDataWriteThread(void *arg)
          DB_STATEMENT hStmt = DBPrepare(hdb, _T("UPDATE raw_dci_values SET raw_value=?,transformed_value=?,last_poll_time=? WHERE item_id=?"));
          if (hStmt != NULL)
          {
+            DB_STATEMENT hDeleteStmt = NULL;
             int count = 0;
             while(true)
             {
-               DBBind(hStmt, 1, DB_SQLTYPE_VARCHAR, rq->rawValue, DB_BIND_STATIC);
-               DBBind(hStmt, 2, DB_SQLTYPE_VARCHAR, rq->transformedValue, DB_BIND_STATIC);
-               DBBind(hStmt, 3, DB_SQLTYPE_INTEGER, (INT64)rq->timestamp);
-               DBBind(hStmt, 4, DB_SQLTYPE_INTEGER, rq->dciId);
-               bool success = DBExecute(hStmt);
-
+               bool success = false;
+               if (rq->deleteFlag)
+               {
+                  if (hDeleteStmt == NULL)
+                     hDeleteStmt = DBPrepare(hdb, _T("DELETE FROM raw_dci_values WHERE item_id=?"));
+                  if (hDeleteStmt != NULL)
+                  {
+                     DBBind(hDeleteStmt, 1, DB_SQLTYPE_INTEGER, rq->dciId);
+                     success = DBExecute(hDeleteStmt);
+                  }
+               }
+               else
+               {
+                  DBBind(hStmt, 1, DB_SQLTYPE_VARCHAR, rq->rawValue, DB_BIND_STATIC);
+                  DBBind(hStmt, 2, DB_SQLTYPE_VARCHAR, rq->transformedValue, DB_BIND_STATIC);
+                  DBBind(hStmt, 3, DB_SQLTYPE_INTEGER, (INT64)rq->timestamp);
+                  DBBind(hStmt, 4, DB_SQLTYPE_INTEGER, rq->dciId);
+                  success = DBExecute(hStmt);
+               }
                free(rq);
 
                count++;
@@ -293,6 +354,8 @@ static THREAD_RESULT THREAD_CALL RawDataWriteThread(void *arg)
                   break;
             }
             DBFreeStatement(hStmt);
+            if (hDeleteStmt != NULL)
+               DBFreeStatement(hDeleteStmt);
          }
 			DBCommit(hdb);
 		}
