@@ -820,39 +820,6 @@ public:
 };
 
 /**
- * Delayed SQL request
- */
-typedef struct
-{
-	TCHAR *query;
-	int bindCount;
-	BYTE *sqlTypes;
-	TCHAR *bindings[1]; /* actual size determined by bindCount field */
-} DELAYED_SQL_REQUEST;
-
-/**
- * Delayed request for idata_ INSERT
- */
-typedef struct
-{
-	time_t timestamp;
-	UINT32 nodeId;
-	UINT32 dciId;
-	TCHAR value[MAX_RESULT_LENGTH];
-} DELAYED_IDATA_INSERT;
-
-/**
- * Delayed request for raw_dci_values UPDATE
- */
-typedef struct
-{
-	time_t timestamp;
-	UINT32 dciId;
-	TCHAR rawValue[MAX_RESULT_LENGTH];
-	TCHAR transformedValue[MAX_RESULT_LENGTH];
-} DELAYED_RAW_DATA_UPDATE;
-
-/**
  * Graph ACL entry
  */
 struct GRAPH_ACL_ENTRY
@@ -1038,6 +1005,7 @@ void NXCORE_EXPORTABLE QueueSQLRequest(const TCHAR *query);
 void NXCORE_EXPORTABLE QueueSQLRequest(const TCHAR *query, int bindCount, int *sqlTypes, const TCHAR **values);
 void QueueIDataInsert(time_t timestamp, UINT32 nodeId, UINT32 dciId, const TCHAR *value);
 void QueueRawDciDataUpdate(time_t timestamp, UINT32 dciId, const TCHAR *rawValue, const TCHAR *transformedValue);
+void QueueRawDciDataDelete(UINT32 dciId);
 void StartDBWriter();
 void StopDBWriter();
 
